<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.main.WelcomeFragment">

    <Button
        android:id="@+id/welcomeFragmentPlayButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/prove_it"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcomeFragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/robotImageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/messageWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/message_incentive_to_play"
        android:textColor="#FCFCFC"
        app:layout_constraintBottom_toTopOf="@+id/welcomeFragmentPlayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/robotImageView"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_group_15"
        app:layout_constraintBottom_toBottomOf="@+id/welcomeFragmentTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/welcomeFragmentTitle"
        app:layout_constraintTop_toTopOf="@+id/welcomeFragmentTitle" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/messageWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeFragmentTitle"
        app:layout_constraintVertical_bias="0.57"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/robot_green" />

</androidx.constraintlayout.widget.ConstraintLayout>

