<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="gameFragment"
            type="com.puntogris.areyouarobot.ui.PostGameFragment" />
        <variable
            name="gameViewModel"
            type="com.puntogris.areyouarobot.ui.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.PostGameFragment">

        <Button
            android:id="@+id/tryAgainButtonPostGame"
            android:layout_width="220dp"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/try_again"
            android:onClick="@{()->gameFragment.playAgain()}"
            app:layout_constraintBottom_toTopOf="@+id/saveScore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/postGameFragmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="171dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="182dp"
            android:text="@string/you_lost"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/postGameScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="@+id/scorePostGame"
            app:layout_constraintEnd_toStartOf="@+id/scorePostGame"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/scorePostGame" />

        <TextView
            android:id="@+id/postGameTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="@+id/timerPostGame"
            app:layout_constraintEnd_toStartOf="@+id/timerPostGame"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/postGameScore"
            app:layout_constraintTop_toTopOf="@+id/timerPostGame" />

        <TextView
            android:id="@+id/postGameFragmentMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/try_again_robot"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postGameFragmentTitle" />

        <TextView
            android:id="@+id/scorePostGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@{String.valueOf(gameViewModel.score)}"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postGameFragmentMessage" />

        <TextView
            android:id="@+id/timerPostGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@{String.valueOf(gameViewModel.globalTime)}"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scorePostGame" />

        <Button
            android:id="@+id/saveScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:onClick="@{()->gameFragment.openSaveRankingDialog()}"
            android:text="@string/save_score"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>